# texcol

./: CMakeLists.txt  LICENSE  README.md  controlwindow.cpp  controlwindow.hpp  main.cpp  sansation.hpp  shadereffect.cpp  shadereffect.hpp  texcol.cpp  texcol.hpp
rsm/rsm/log/: log_device.hpp
